# slitherlinker

./: .gitignore  .pre-commit-config.yaml  LICENSE  detect.ipynb  detect.py  model.hd5.data-00000-of-00001  pyproject.toml
detector/: Dockerfile  README.md  detect.ipynb  detect.py  easy.txt  hard.txt  model.hd5.data-00000-of-00001  model.hd5.index  model.weights.h5  pyproject.toml
solver/: CLAUDE.md  Cargo.toml  README.md
solver/src/: adapter.rs  data.rs  main.rs  parse.rs  patterns.rs  puzzle.rs  solve.rs  solve_common.rs  solve_splr.rs  solve_varisat.rs  solve_z3.rs
solver/src/data/: baked_in_patterns.rs  pattern.rs  puzzle.rs  solution.rs
