[tool.poetry]
name = "slitherlinker"
version = "0.1.0"
description = "Solve slitherlink puzzles"
authors = ["Oleksandr Podze <dasdeg@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
opencv-python = "^4.4.0"
matplotlib = "^3.3.1"
scikit-image = "^0.17.2"
imutils = "^0.5.3"
tensorflow = "^2.3.0"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
jupyterlab = "^2.2.7"
tqdm = "^4.48.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
