[tool.poetry]
name = "slitherlinker"
version = "0.1.0"
description = "Solve slitherlink puzzles"
authors = ["Oleksandr Podze <dasdeg@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
cython = "^3.0.5"
opencv-python = "^4.8.1.78"
matplotlib = "^3.8.1"
scikit-image = "^0.22.0"
imutils = "^0.5.4"
click = "^8.1.7"
pillow = "^10.1.0"
tensorflow = "^2.14.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.8"
tqdm = "^4.66.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
