[project]
name = "slitherlinker"
version = "0.1.0"
description = "Solve slitherlink puzzles"
authors = [{ name = "Oleksandr Podze", email = "dasdeg@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.9,<3.11"
dependencies = [
    "cython>=3.0.5,<4",
    "opencv-python>=4.8.1.78,<5",
    "matplotlib>=3.8.1,<4",
    "scikit-image>=0.22.0,<1",
    "imutils>=0.5.4,<1",
    "click>=8.1.7,<9",
    "pillow>=10.1.0,<11",
    "tensorflow>=2.14.0,<3",
    "tf-keras>=2.20.1",
]

[dependency-groups]
dev = ["jupyterlab>=4.0.8,<5", "tqdm>=4.66.1,<5", "ipython>=8.17.2,<9"]
