[project]
name = "slitherlinker"
version = "0.1.0"
description = "Solve slitherlink puzzles"
authors = [{ name = "Oleksandr Podze", email = "dasdeg@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.11,<3.14"
dependencies = [
    "cython>=3.0.5",
    "opencv-python>=4.8.1.78",
    "matplotlib>=3.8.1",
    "scikit-image>=0.22.0",
    "imutils>=0.5.4,<1",
    "click>=8.1.7,<9",
    "pillow>=12",
    "tensorflow>=2.14.0,<3",
]

[dependency-groups]
dev = ["jupyterlab>=4.0.8", "tqdm>=4.66.1", "ipython>=9"]
